# codex

.github/workflows/: cargo-rail-ci.yml
codex-rs/: Cargo.toml
codex-rs/.config/: rail.toml
codex-rs/app-server/tests/common/: Cargo.toml
codex-rs/backend-client/: Cargo.toml
codex-rs/cloud-tasks-client/: Cargo.toml
codex-rs/codex-backend-openapi-models/: Cargo.toml
codex-rs/lmstudio/: Cargo.toml
codex-rs/mcp-server/tests/common/: Cargo.toml
codex-rs/rmcp-client/: Cargo.toml
codex-rs/tui/: Cargo.toml
codex-rs/windows-sandbox-rs/: Cargo.toml
