[package]
name = "codex-backend-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true } #unified
codex-backend-openapi-models = { path = "../codex-backend-openapi-models" }
codex-core = { workspace = true }
codex-protocol = { workspace = true }
reqwest = { workspace = true } #unified
serde = { workspace = true } #unified
serde_json = { workspace = true } #unified

[dev-dependencies]
pretty_assertions = "1"
