[package]
name = "codex-cloud-tasks-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_cloud_tasks_client"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = ["online"]
online = ["dep:codex-backend-client"]
mock = []

[dependencies]
anyhow = { workspace = true } #unified
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
codex-backend-client = { path = "../backend-client", optional = true }
codex-git = { workspace = true }
diffy = "0.4.2"
serde = { workspace = true } #unified
serde_json = { workspace = true } #unified
thiserror = "2.0.17"
