[package]
name = "codex-lmstudio"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_lmstudio"
path = "src/lib.rs"


[dependencies]
codex-core = { path = "../core" }
reqwest = { workspace = true } #unified
serde_json = { workspace = true } #unified
tokio = { version = "1", features = ["rt"] }
tracing = { version = "0.1.43", features = ["log"] }
which = "6.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"

[lints]
workspace = true
